--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://tradesphere-backend-g0sr.onrender.com/api
 
 VITE_CLOUDINARY_CLOUD_NAME=dlkx9dhake
 VITE_CLOUDINARY_UPLOAD_PRESET=ecommerce upload
