--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-CLIENT_URL=http://localhost:8080
+CLIENT_URL=https://tradesphere-wr1e.onrender.com
 
 # MongoDB Atlas Connection
 MONGODB_URI=mongodb+srv://mtemi0690_db_user:commerce123@cluster0.px4lq8y.mongodb.net/ecom-craft-central?retryWrites=true&w=majority
